# history-production

./: .gitignore  .worktree-owner.pid  CLAUDE.md  pyproject.toml
.entire/: settings.json
app/: db.py  main.py
docs/: KNOWLEDGE_SUMMARY.md  NICHE_STYLE_GUIDE_TEMPLATE.md  TEAM_LEAD_PROMPT.md  WEEKLY_PRODUCTION_SCHEDULE.md  runbook.md
ingest/: env_loader.py  first_run.py  history_git.py  jobs.py  youtube_client.py
istanbul/: COST_ESTIMATE.md  MUSIC_CUES.md  SCRIPT.md  TELEPROMPTER.md
kpi/: CHANGELOG.md  README.md  pyproject.toml
kyoto/: SCRIPT.md  TELEPROMPTER.md
nagasaki/: COST_ESTIMATE.md  MUSIC_CUES.md  README.md  SCRIPT.md  SEO_PACKAGE.md
nagasaki-v2/: COST_ESTIMATE.md  CTA_PLACEMENT.md  README.md  SCRIPT.md  SEO_PACKAGE.md  TELEPROMPTER.md
paris/: HOOK_VISUAL_PROMPTS.md  README.md  RESEARCH.md  SCRIPT.md  SCRIPT_EN.md  SCRIPT_SHORT.md  TELEPROMPTER.md
quanzhou/: MUSIC_CUES.md  README.md  SCRIPT.md  TELEPROMPTER.md
scripts/: bootstrap_youtube_oauth.py  install_kpi_dashboard.sh  run_refresh.py
shorts/: CLAUDE.md  Стамбул карабли.md  Стамбул одежда.md  Стамбул оружие.md  дома NYC.md  каробли NYC.md  такси нью-йорк.md  человек NYC.md
systemd/: claude-kpi-dashboard.service  dashboard-kpi-refresh.service
templates/: _card.html  exceptions.html  monthly.html  weekly.html
tests/: test_bootstrap.py  test_calibration.py  test_calibration_banner.py  test_dashboard_views.py  test_empty_state.py  test_history_git.py  test_ingest_jobs.py  test_localhost_bind.py  test_migrations.py  test_missing_map_exclusion.py  test_retry.py  test_run_refresh.py  test_task05_r1_coverage.py  test_youtube_client.py
xian/: README.md  SCRIPT.md  TELEPROMPTER.md
(+292 files in other folders)
