[project]
name = "kpi-dashboard"
version = "0.1.0"
description = "Local-hosted KPI dashboard for YouTube channel Cities Evolution."
requires-python = ">=3.11"
dependencies = [
    # Runtime dependencies land here in subsequent tasks:
    #   task-02: google-api-python-client, google-auth-oauthlib, python-dotenv
    #   task-06: flask, jinja2
    # task-01 introduces only the stdlib-backed db layer + test harness.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
